# EZ-DESIGN-study

./: .gitignore  README.md  pyproject.toml
week1/: README.md  computer.py  cpu.py  memory.py
week1/tests/: pytest.ini  test_computer.py
week2/: README.md  api.py  main.py  wrapper.py
week3/: README.md  command.py  editor.py  main.py  snapshot.py
