[tool.poetry]
name = "ez-design-study"
version = "0.1.0"
description = ""
authors = ["pyapyapya <xo294@naver.comsource>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.0"
fastapi = "^0.109.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
