[tool.poetry]
name = "ez-design-study"
version = "0.1.0"
description = ""
authors = ["pyapyapya <xo294@naver.comsource>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.0"
fastapi = "^0.109.2"
requests = "^2.31.0"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
